fix(push-publishing): harden static un-publish markers per PR review (#35365)
Address review feedback on #36193:

- Path traversal / tar-slip (High): StaticUnpublishMarker now normalizes the
  composed /live/ path and skips any marker that resolves outside the /live/
  subtree, so unvalidated host/asset path segments (".." etc.) can never reach
  the bundle output (filesystem or tar entry).
- Language scoping (High): the publish queue hardcodes language_id=1
  (PublisherAPIImpl, "push regardless of language"), so
  PublishQueueElement.getLanguageId() is unreliable and the previous scoping
  always targeted language 1 — missing non-default-language content. Removed the
  markerLanguages() helper and now remove the artifact across all bundle
  languages (language-agnostic, matching the queue's design). Per-language
  un-publish would require the queue to carry the real language.
- Use String.isBlank() instead of trim().isEmpty() (Medium).

Adds path-traversal unit tests; removes the obsolete markerLanguages test.

Refs: #35365

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>